Fix: swagger params
